// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches snapshot > default variant 1`] = `
<DocumentFragment>
  <div
<<<<<<< HEAD
    class="sc-gsFSjX fJXrLa aje-input__text sc-dLNtp kdQpaF aje-input--default is-medium"
=======
    class="sc-gsFSjX pXqer aje-input__text sc-jEABJj cruxMz aje-input--default is-medium"
>>>>>>> main
  >
    <label
      class="sc-aYaIB dImjZF is-auto"
      for="react-aria-:r0:"
      id="react-aria-:r1:"
    >
      Text Label
    </label>
    <p
      class="sc-gEvDqW bQNeHF is-auto"
      id="react-aria-:r3:"
    >
      message
    </p>
    <input
      aria-describedby="react-aria-:r3:"
      aria-labelledby="react-aria-:r1:"
      class="sc-fqkwJk cgejtS"
      id="react-aria-:r0:"
      placeholder="placeholder"
      type="text"
      value="content"
    />
  </div>
</DocumentFragment>
`;

exports[`matches snapshot > floating variant 1`] = `
<DocumentFragment>
  <div
<<<<<<< HEAD
    class="sc-gsFSjX fJXrLa aje-input__text sc-dLNtp kdQpaF aje-input--floating is-medium"
=======
    class="sc-gsFSjX pXqer aje-input__text sc-jEABJj cruxMz aje-input--floating is-medium"
>>>>>>> main
    data-float="true"
  >
    <div
      class="sc-ikkyvV ijWLgB"
    >
      <input
        aria-describedby="react-aria-:r8:"
        aria-labelledby="react-aria-:r6:"
        class="sc-fqkwJk cgejtS"
        data-float="true"
        id="react-aria-:r5:"
        placeholder="placeholder"
        type="text"
        value="content"
      />
      <label
        class="sc-aYaIB dImjZF is-auto"
        for="react-aria-:r5:"
        id="react-aria-:r6:"
      >
        Text Label
      </label>
    </div>
    <p
      class="sc-gEvDqW bQNeHF is-auto"
      id="react-aria-:r8:"
    >
      message
    </p>
  </div>
</DocumentFragment>
`;
